--- a/home/templates/home/change-password.html
+++ b/home/templates/home/change-password.html
@@ -1,39 +1,45 @@
 {% extends "home/base.html" %}
 {% load static %}
-{% load bootstrap5 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
 {% block content %}
 
-  {% if next %}
-      {% if user.is_authenticated %}
-          <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
-      {% else %}
-          <p>Please login to see this page.</p>
-      {% endif %}
-  {% endif %}
-  <div class="container my-5">
-    <main class="form-signin w-100 m-auto border bg-body-tertiary rounded-3">
-      <form method="post" action="{% url 'password_change' %}">
-        {% csrf_token %}
-        <h2 class="h3 mb-3 fw-normal">Change password</h2>
-        {% if messages %}
-          {% bootstrap_messages %}
-        {% endif %}
-        <ol>
-          <li><small>Enter your old password.</small></li>
-          <li><small>Enter your new password.</small></li>
-          <li><small>Re-enter your new password.</small></li>
-        </ol>
-        {% bootstrap_form form %}
-        {% buttons %}
-          <button type="submit" class="btn btn-primary">
-            Submit
-          </button>
-        {% endbuttons %}
-        <input type="hidden" name="next" value="{{ next }}">
-      </form>
-    </main>
-  </div>
 
+  <body>
+    <main>
+       <div class="container">
+           <div class="row">
+               <div class="container">
+                   <div class="card brown darken-2">
+                       <div class="card-content white-text">
+                           <span class="card-title"><h3>Change password</h3></span>
+                           <ol>
+                            <li><small>Enter your old password.</small></li>
+                            <li><small>Enter your new password.</small></li>
+                            <li><small>Re-enter your new password.</small></li>
+                          </ol>
+                           <form method="post" action="{% url 'password_change' %}">
+                             {% csrf_token %}
+                             <div class="input-field">
+                               <input id="password" type="password" class="validate">
+                               <label for="password">Current password</label>
+                             </div>
+                             <div class="input-field">
+                               <input id="passwordnew" type="password" class="validate">
+                               <label for="passwordnew">New password</label>
+                             </div>
+                             <div class="input-field">
+                              <input id="passwordrepeat" type="password" class="validate">
+                              <label for="passwordrepeat">Re-enter new password</label>
+                            </div>
+                             <div class="card-action">
+                               <a class="waves-effect waves-light btn-large deep-orange accent-3"><i class="material-icons left">swap_vert</i>Change</a>
+                             </div>
+                             <input type="hidden" name="next" value="{{ next }}">
+                         </form>
+                       </div>
+                   </div>
+               </div>
+           </div>
+       </div>
+   </main>
+ </body>
 {% endblock %}
