--- a/home/templates/home/password_reset_form.html
+++ b/home/templates/home/password_reset_form.html
@@ -1,41 +1,36 @@
 {% extends "home/base.html" %}
 {% load static %}
-{% load bootstrap5 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
 {% block content %}
 
 <body>
-  {% if next %}
-      {% if user.is_authenticated %}
-          <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
-      {% else %}
-          <p>Please login to see this page.</p>
-      {% endif %}
-  {% endif %}
-  
-  <div class="container my-5">
-    <main class="form-signin w-100 m-auto border bg-body-tertiary rounded-3">
-      <form method="post" action="{% url 'password_reset' %}">
-        {% csrf_token %}
-        <h1 class="h3 mb-3 fw-normal">Reset password</h1>
-        {% if messages %}
-          {% bootstrap_messages %}
-        {% endif %}
-        <ol>
-          <li>Enter your email address.</li>
-          <li>On submit, a reset email is sent.</li>
-          <li>Click the link in the email to reset.</li>
-        </ol>
-        {% bootstrap_form form %}
-        {% buttons %}
-          <button type="submit" class="btn btn-primary">
-            Submit
-          </button>
-        {% endbuttons %}
-        <input type="hidden" name="next" value="{{ next }}">
-      </form>
-    </main>
-  </div>
+  <main>
+      <div class="container">
+          <div class="row">
+              <div class="container">
+                  <div class="card brown darken-2">
+                      <div class="card-content white-text">
+                          <span class="card-title"><h3>Reset password</h3></span>
+                          <ol>
+                            <li>Enter your email address.</li>
+                            <li>On submit, a reset email is sent.</li>
+                            <li>Click the link in the email to reset.</li>
+                          </ol>
+                          <form method="post" action="{% url 'password_reset' %}">
+                            {% csrf_token %}
+                            <div class="input-field">
+                              <input id="email" type="email" class="validate">
+                              <label for="email">Email</label>
+                            </div>
+                            <div class="card-action">
+                              <a class="waves-effect waves-light btn-large deep-orange accent-3"><i class="material-icons left">upload</i>Submit</a>
+                            </div>
+                            <input type="hidden" name="next" value="{{ next }}">
+                          </form>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </main>
 </body>
 {% endblock %}
