--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -2,29 +2,60 @@
 
 {% load static %}
 {# Load the tag library #}
-{% load bootstrap5 %}
 
 {# Load CSS and JavaScript #}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
 {% block content %}
-<style>
-  .border-dashed { --bs-border-style: dashed; }
-</style>
-<body>
-  <div class="container my-5">
-    <div class="p-5 text-center bg-body-tertiary rounded-3">
-      {% if messages %}
-        {% bootstrap_messages %}
-      {% endif %}
-      <img src="{% static 'home/k4.png' %}" alt="Karma Icon" width="100" height="100">
-      {% if user.is_authenticated %}
-        <h1 class="w3-jumbo">Welcome back {{ un }}!</h1>
-        <br/>
-      {% else %}  
-        <h1 class="w3-jumbo">Welcome!</h1>
-      {% endif %}
+
+<div class="container">
+  <div class="section no-pad-bot" id="index-banner">
+    <div class="container">
+        <br><br>
+        <h1 class="header center  brown-text darken-4-text">LETS GO</h1>
+        <div class="row center">
+            <h5 class="header col s12 light">Work with a team who wants that next project</h5>
+        </div>
+        <div class="row center">
+            <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light brown darken-4">Get Started</a>
+        </div>
+        <br><br>
     </div>
   </div>
-</body>
+  <div class="divider"></div>
+  <div class="section">
+
+    <!--   Icon Section   -->
+    <div class="row">
+      <div class="col s12 m4">
+        <div class="icon-block">
+          <h2 class="center grey-text darken-4-text"><i class="large material-icons">flash_on</i></h2>
+          <h5 class="center">Speed up your development</h5>
+
+          <p class="light">High performing team, competitive sprints, rewarding velocity, we love development and we love gaming the work to get the results. This is the way.</p>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="icon-block">
+          <h2 class="center grey-text darken-4-text"><i class="large material-icons">group</i></h2>
+          <h5 class="center">User experience focused</h5>
+
+          <p class="light">Responsive elements, Material Design, Iconology, UI fonts and a framework to deliver it. Components and animations that provide more feedback to users. A single underlying responsive system across all platforms allow for a more unified user experience.</p>
+        </div>
+      </div>
+
+      <div class="col s12 m4">
+        <div class="icon-block">
+          <h2 class="center grey-text darken-4-text"><i class="large material-icons">settings</i></h2>
+          <h5 class="center">Easy to work with</h5>
+
+          <p class="light">Great attitude, detailed documentation, specific 'How-to' aricles. Open to feedback and happy to answer any questions a user may have about Karmacanix and our approach.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br><br>
+  
+</div>
+
+
 {% endblock %}
