--- a/home/templates/home/password_reset_confirm.html
+++ b/home/templates/home/password_reset_confirm.html
@@ -1,41 +1,39 @@
 {% extends "home/base.html" %}
 {% load static %}
-{% load bootstrap5 %}
-{% bootstrap_css %}
-{% bootstrap_javascript %}
 {% block content %}
 
 <body>
-  {% if next %}
-      {% if user.is_authenticated %}
-          <p>Your account doesn't have access to this page. To proceed, please login with an account that has access.</p>
-      {% else %}
-          <p>Please login to see this page.</p>
-      {% endif %}
-  {% endif %}
-
-  <div class="container my-5">
-    <main class="form-signin w-100 m-auto border bg-body-tertiary rounded-3">
-        <form class="form" method="post">
-            {% csrf_token %}
-            <h2 class="h3 mb-3 fw-normal">Set new password</h2>
-            {% if messages %}
-              {% bootstrap_messages %}
-            {% endif %}
-            <ol>
-            <li><small>Enter your new password.</small></li>
-            <li><small>Re-enter your new password.</small></li>
-            </ol>
-            {% bootstrap_form form %}
-            {% buttons %}
-            <button type="submit" class="btn btn-primary">
-                Submit
-            </button>
-            {% endbuttons %}
-            <input type="hidden" name="next" value="{% url 'password_reset_complete' %}">
-        </form>
-    </main>
-  </div>
-
+   <main>
+      <div class="container">
+          <div class="row">
+              <div class="container">
+                  <div class="card brown darken-2">
+                      <div class="card-content white-text">
+                          <span class="card-title"><h3>Set new password</h3></span>
+                          <ol>
+                            <li><small>Enter your new password.</small></li>
+                            <li><small>Re-enter your new password.</small></li>
+                          </ol>
+                          <form class="form" method="post">
+                            {% csrf_token %}
+                            <div class="input-field">
+                              <input id="password" type="password" class="validate">
+                              <label for="password">Password</label>
+                            </div>
+                            <div class="input-field">
+                              <input id="passwordnew" type="password" class="validate">
+                              <label for="passwordnew">Password</label>
+                            </div>
+                            <div class="card-action">
+                              <a class="waves-effect waves-light btn-large deep-orange accent-3"><i class="material-icons left">swap_vert</i>Change</a>
+                            </div>
+                          <input type="hidden" name="next" value="{% url 'password_reset_complete' %}">
+                        </form>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </main>
 </body>
 {% endblock %}
