--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -10,7 +10,8 @@
   <div class="section no-pad-bot" id="index-banner">
     <div class="container">
         <br><br>
-        <h1 class="header center  brown-text darken-4-text">LETS GO</h1>
+        
+        <h1 class="header center  brown-text darken-4-text"><img src="{% static 'images/k4.png' %}" width="200" height="200"></h1>
         <div class="row center">
             <h5 class="header col s12 light">Work with a team who wants that next project</h5>
         </div>
