--- a/home/templates/home/nav.html
+++ b/home/templates/home/nav.html
@@ -7,7 +7,7 @@
 <nav class="orange darken-4" role="navigation">
     <div class="nav-wrapper container">
         <ul class="left hide-on-med-and-down">        
-            <li><a id="logo-container" href="{% url 'home' %}" class="brand-logo" style='font-family: "Leckerli One", serif; text-shadow: 2px 2px 2px #4e342e;'>Karmacanix</a></li>
+            <li><a id="logo-container" href="{% url 'home' %}" class="brand-logo pulse" style='font-family: "Leckerli One", serif; text-shadow: 2px 2px 2px #4e342e;'>Karmacanix</a></li>
         </ul>
         <ul class="right hide-on-med-and-down">
             <li><a class="waves-effect waves-light btn brown darken-2" href="#">Navbar Link</a></li>
